--- a/L4NdoStreamService/L4NdoStreamService.csproj
+++ b/L4NdoStreamService/L4NdoStreamService.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FFMpegCore" Version="4.1.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
